--- a/wa14.html
+++ b/wa14.html
@@ -18,5 +18,7 @@ p    {color: black;}
 
 <p>Lastly, we also worked with ReavealJS, Vega, and Jupyter Notebooks. RevealJS is perfect if I wanted to present my TV assignment in a powerpoint form. What is cool about Reaveal JS is how the presentation is a link and how the slide can have a down arrow. Vega and Jupter Notebooks are good tools for more data science vibes. These come in handy to incorporate graphs and other key codeing type things.</p>
 
+<p> We had covered many areas in the course. But there are still other mediums as well such as social media. These can be used to reach a large crowd. But, there are pros and cons for each method.</p>
+
 </body>
 </html>
